<resources>
    <string name="app_name">TwilioAuth SDK Sample</string>

    <string name="loading_msg">Loading…</string>
    <string name="error_no_connection">Please make sure you have internet connection</string>

    <!-- Main Activity -->
    <string name="menu_navigation_tokens">Tokens</string>
    <string name="menu_navigation_requests">Requests</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Requests List -->
    <string name="fragment_approval_requests_pending_title">PENDING</string>
    <string name="fragment_approval_requests_archive_title">ARCHIVE</string>
    <string name="transaction_logo_content_description">Transaction logo</string>
    <string name="menu_refresh_title">Refresh</string>
    <string name="menu_clear_data">Clear Data</string>
    <string name="menu_show_ids">IDs</string>
    <string name="dialog_confirm_clear_data">Are you sure you want to clear all local data?</string>
    <string name="dialog_show_ids">Device ID:%1$s \nAuthy ID:%2$s</string>
    <string name="expires_at_message">Expires at %1$s</string>
    <string name="expired_on_message">Expired on %1$s</string>
    <string name="transaction_expired_title">Expired</string>
    <string name="transaction_approved_title">Approved</string>
    <string name="transaction_denied_title">Denied</string>
    <string name="transactions_empty_pending">You have no pending requests</string>
    <string name="transactions_empty_generic">You have no requests</string>
    <string name="time_year">%1$d y</string>
    <string name="time_month">%1$d m</string>
    <string name="time_day">%1$d day</string>
    <string name="time_hour">%1$d hr</string>
    <string name="time_min">%1$d min</string>
    <string name="time_sec">%1$d sec</string>
    <string name="title_activity_registration">Register</string>
    <string name="approval_request_list_search_hint">"Search a request"</string>
    <string name="approval_request_fetch_error">Unable to fetch approval requests</string>


    <!-- Approval Requests Detail -->
    <string name="title_activity_approval_request_detail">Approval Request</string>
    <string name="approve_button_label">APPROVE</string>
    <string name="deny_button_label">DENY</string>
    <string name="deny_failed">Request cannot be denied</string>
    <string name="approve_failed">Request cannot be approved</string>
    <string name="approve_success">Request approved successfully</string>
    <string name="deny_success">Request denied successfully</string>
    <string name="transaction_not_updatable_warning">You can no longer approve or deny.</string>
    <string name="transaction_approved_message">This request has been approved.</string>
    <string name="transaction_denied_message">This request has been denied.</string>
    <string name="transaction_expired_message">Expired on %1$s</string>
    <string name="approval_request_action_refresh">Refresh</string>

    <!-- Registration screen -->
    <string name="registration_title">Device Registration</string>
    <string name="registration_user_id_label">User ID</string>
    <string name="registration_user_id_hint">abcdef12345678</string>
    <string name="registration_backend_url_label">Backend URL</string>
    <string name="registration_backend_url_hint">https required</string>
    <string name="registration_register_device_button_label">REGISTER DEVICE</string>
    <string name="registration_error_invalid_field">Make sure the value you entered is correct</string>
    <string name="registration_error_verification">Error registering the device</string>
    <string name="registration_error_device_deleted">Device deleted.\nEnter a new Authy ID and Backend URL</string>
</resources>
